rifai i tentacoli di traversata e Fend Off sulla mod di riferimento
Traversata - la presa:
- ogni braccio tiene il suo appiglio fra un tick e l'altro, e lo molla solo
  per un motivo: troppo lontano, arrivato addosso, finito dietro le spalle,
  blocco scavato. Prima gli appigli si ricalcolavano da capo a ogni tick;
- il controllo "blocco sparito" guardava la cella davanti alla parete invece
  della parete: leggeva aria e apriva il 93% delle prese. Ora la presa si
  porta dietro la cella colpita. Misurato: appigli che reggono dal 52 al 97%;
- il pacchetto degli appigli porta anche i posti vuoti, cosi' ogni braccio
  resta sulla sua spalla invece di scalare quando un altro molla.

Traversata - l'aspetto:
- tubo tondo a 12 lati cucito fra anelli, con colletto, pancia e punta,
  largo come prima; texture avvolta lungo il braccio; luce del mondo al posto
  della luce piena; tinta del tubo alzata a 170, perche' a 18 la texture
  usciva nero pieno;
- i bracci si allungano verso l'appiglio e rientrano quando mollano, invece
  di comparire e sparire; ogni braccio e' una corda di 16 nodi con peso,
  inerzia e smorzamento, che non attraversa i blocchi;
- suoni di partenza, presa e ritiro.

Fend Off Enemies - mosse invece di tentacoli fissi sul bersaglio:
- frusta a distanza e schiaffo da vicino, col danno quando il braccio
  arriva; contrattacco immediato su chi colpisce da vicino;
- ogni tanto uno schianto a terra (un nemico alzato e sbattuto giu') o uno
  scontro (due nemici alzati e sbattuti uno contro l'altro), uno alla volta;
  boss e mob troppo grossi non si sollevano;
- i neutrali si toccano solo se sono gia' arrabbiati; chi colpisce resta
  bersaglio per trenta secondi, qualunque cosa sia.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>